--- a/PetSaver/Info.plist
+++ b/PetSaver/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>We would like to access the camera to take photos</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We&apos;d like access to your photos :)</string>
 	<key>CFBundleDevelopmentRegion</key>
